--- a/src/main/webapp/WEB-INF/CSS/forforms.css
+++ b/src/main/webapp/WEB-INF/CSS/forforms.css
@@ -38,7 +38,7 @@ h1 {
 	font-size: 20px;
 	color: black;
 }
-.form .radbtn{
+.form #radbtn{
 	font-family: Verdana, sans-serif;
 	font-size: 30px;
 	color: white;
