new css files added

--- a/src/main/webapp/WEB-INF/CSS/forms.css
+++ b/src/main/webapp/WEB-INF/CSS/forms.css
@@ -12,7 +12,6 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
 	margin: 0;
 }
 h1 {
@@ -229,4 +228,23 @@ h1 {
 	padding: 5px 8px;
 	background-color: #ffffff;
 	color: #080710;
+}
+
+.back-button {
+    border: none;
+    background-color: #ff4d4d;
+    font-size:15px;
+    color: white;
+    margin: auto;
+    width: 100px;
+    display: block;
+    border-radius: 10px;
+    padding: 10px 0;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left:1%;
+    margin-top:1%;
+}
+a{
+	text-decoration:none;	
 }
