--- a/src/main/webapp/WEB-INF/CSS/for-formsandtables.css
+++ b/src/main/webapp/WEB-INF/CSS/for-formsandtables.css
@@ -60,6 +60,20 @@ h1 {
 }
 
 
+.back-button {
+    border: none;
+    background-color: #ff4d4d;
+    font-size:15px;
+    color: white;
+    margin: auto;
+    width: 100px;
+    display: block;
+    border-radius: 10px;
+    padding: 10px 0;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left:1%;
+}
 
 .backbtn {
 	position: absolute;
@@ -73,4 +87,8 @@ h1 {
 	font-size: 20px;
 	border: 3px solid red;
 	border-radius: 20px;
+}
+a{
+	text-decoration:none;
+	color:black;
 }
