--- a/src/main/webapp/WEB-INF/CSS/forforms.css
+++ b/src/main/webapp/WEB-INF/CSS/forforms.css
@@ -54,3 +54,18 @@ h1 {
 	width: 140px;
 	margin-right:60%;
 }
+
+.back-button {
+    border: none;
+    background-color: #ff4d4d;
+    font-size:15px;
+    color: white;
+    margin: auto;
+    width: 100px;
+    display: block;
+    border-radius: 10px;
+    padding: 10px 0;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left:1%;
+}
