--- a/src/main/webapp/WEB-INF/CSS/fortables.css
+++ b/src/main/webapp/WEB-INF/CSS/fortables.css
@@ -42,3 +42,18 @@ a {
 	color: red;
 	text-decoration: none;
 }
+
+.back-button {
+    border: none;
+    background-color: #ff4d4d;
+    font-size:15px;
+    color: white;
+    margin: auto;
+    width: 100px;
+    display: block;
+    border-radius: 10px;
+    padding: 10px 0;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left:1%;
+}
