--- a/src/main/webapp/WEB-INF/CSS/forforms.css
+++ b/src/main/webapp/WEB-INF/CSS/forforms.css
@@ -55,6 +55,7 @@ h1 {
 	margin-right:60%;
 }
 
+
 .back-button {
     border: none;
     background-color: #ff4d4d;
@@ -68,4 +69,8 @@ h1 {
     font-weight: bold;
     cursor: pointer;
     margin-left:1%;
+    margin-top:1%;
+}
+a{
+text-decoration:none;
 }
